--- a/index.html
+++ b/index.html
@@ -90,11 +90,12 @@
                 </div>
                 <div class="text-container">
                     <p>
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa asperiores quod eum fugiat
-                        deleniti, quisquam sit voluptatibus perferendis voluptas consequuntur nihil saepe omnis quis
-                        eius perspiciatis ratione minima corporis veritatis aut iste maiores quasi atque rerum! Deserunt
-                        corporis quibusdam repellendus, non minima aliquid, laudantium repudiandae ipsam laboriosam unde
-                        doloremque tenetur!
+                        Hello there! This is Sahil Sinnarkar currently pursuing B.Tech in Computer Technology at
+                        Vishwakarma Institute Of Technology. I have completed my Diploma in Computer technology at
+                        Government Polytechnic Nashik in academic year 2022-23.
+                        I am an enthusiast Flutter developer and made final year project in diploma in fluteer itself. I
+                        am always ready to work with my team with same energy along with good communication skills and
+                        leardership qualities.
                     </p>
                 </div>
             </div>
