--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
                         Hello there! This is Sahil Sinnarkar currently pursuing B.Tech in Computer Technology at
                         Vishwakarma Institute Of Technology. I have completed my Diploma in Computer technology at
                         Government Polytechnic Nashik in academic year 2022-23.
-                        I am an enthusiast Flutter developer and made final year project in diploma in fluteer itself. I
+                        I am an enthusiast Flutter developer and made final year project in diploma in flutter itself. I
                         am always ready to work with my team with same energy along with good communication skills and
                         leardership qualities.
                     </p>
@@ -191,7 +191,7 @@
                             <img src="./assets/checked.png" alt="Experience Icon" class="icon">
                             <div>
                                 <h3>Git</h3>
-                                <p>Intermidate</p>
+                                <p>Intermediate</p>
                             </div>
                         </article>
                     </div>
